issue: Remove Pear Dependency
This removes the Pear Dependency for composer and includes it in lib until
we completely rewrite the plugin.

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ stage
 *.phar
 
 # Ignore installed dependencies and composer if placed here
-lib/
+lib/*
+!/lib/pear-pear.php.net/
 composer.phar
 composer.lock
 composer.json
