gitignore: Ignore lib and include directories

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ stage
 # Ignore compiled phar files
 *.phar
 
+# Ignore hydrated libs & include dir
+**/lib
+**/include
+
 # Ignore installed dependencies and composer if placed here
 lib/*
 !/lib/pear-pear.php.net/
